@@ -1,7 +1,6 @@
 # qjackctl.pri
 #
-PREFIX   = @ac_prefix@
-
-CONFIG  += @ac_debug@ @ac_qdbus@
-LIBS    += @ac_libs@
-INCPATH += @ac_incpath@
+PREFIX  = @ac_prefix@
+CONFIG += @ac_debug@ @ac_qdbus@
+INCLUDEPATH += @ac_incpath@
+LIBS += @ac_libs@
